<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loan Predictor</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="Gender">gender</string>
    <string name="married">married</string>
    <string name="education">education</string>
    <string name="selfemployed">Self Employed</string>
    <string name="income">Income</string>
    <string name="coincome">Co-Income</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_amount_term">loan term</string>
    <string name="credit_history">Credit History</string>
    <string name="property">Property Area</string>
    <string name="radio_male">M</string>
    <string name="radio_female">F</string>
    <string name="radio_single">Single</string>
    <string name="radio_married">Married</string>
    <string name="radio_divorcee">Divorcee</string>
    <string name="radio_graduate">Graduate</string>
    <string name="radio_not_graduate">Not Graduate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="rural">Rural</string>
    <string name="urban">Urban</string>
    <string name="semiurban">Semiurban</string>
    <string name="predict">Predict</string>
    <string name="gender">Gender</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_married">Married</string>
    <string name="hint_education">Education</string>
    <string name="hint_employed">Employment Status</string>
    <string name="hint_property">Property Area</string>
    <string name="hint_credit">Credit given</string>
    <string name="response">Response</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>

    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>

    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    +

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location updated</string>
    <string name="location">location</string>
    <string name="credit">credit 0/1</string>
</resources>