<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.examenigma.ai.suggest.MainActivity">
<LinearLayout

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:orientation="vertical">


        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/gendertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/hint_gender"

        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <RadioGroup


        android:id="@+id/gender"
        android:hint="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:orientation="horizontal"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />

    </RadioGroup>

    <TextView
        android:id="@+id/marriedtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/hint_married"

        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />


    <RadioGroup
        android:id="@+id/married"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:orientation="horizontal"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint">

        <RadioButton
            android:id="@+id/radioSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:checked="true" />

        <RadioButton
        android:id="@+id/radioMarried"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes" />




    </RadioGroup>


    <TextView
        android:id="@+id/educationtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/hint_education"

        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <RadioGroup
        android:id="@+id/education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:orientation="horizontal"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint">

        <RadioButton
            android:id="@+id/graduate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_graduate"
            android:checked="true" />

        <RadioButton
            android:id="@+id/notgraduate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_not_graduate" />




    </RadioGroup>
    <TextView
        android:id="@+id/employedtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/hint_employed"

        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <RadioGroup
        android:id="@+id/employed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:orientation="horizontal"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint">

        <RadioButton
            android:id="@+id/self_employed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true" />

        <RadioButton
            android:id="@+id/not_Self_employed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />




    </RadioGroup>

    <EditText
        android:id="@+id/income"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/input_register_bg"
        android:hint="@string/income"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"/>


    <EditText
        android:id="@+id/co_income"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/input_register_bg"
        android:hint="@string/coincome"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"/>
    <EditText
        android:id="@+id/loan_amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/input_register_bg"
        android:hint="@string/loan_amount"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"/>

    <EditText
        android:id="@+id/loan_amount_term"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/input_register_bg"
        android:layout_marginBottom="10dp"
        android:hint="@string/loan_amount_term"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"/>
    <TextView
        android:id="@+id/credittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/hint_credit"

        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <EditText
        android:id="@+id/credit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/input_register_bg"
        android:layout_marginBottom="10dp"
        android:hint="@string/credit"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"/>

    <TextView
        android:id="@+id/propertytext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/hint_property"

        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <RadioGroup
        android:id="@+id/property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:orientation="horizontal"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint">

        <RadioButton
            android:id="@+id/rural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rural"
            android:checked="true" />

        <RadioButton
            android:id="@+id/urban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urban" />

        <RadioButton
            android:id="@+id/semiurban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semiurban" />


    </RadioGroup>













    <Button
        android:id="@+id/Predict"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ea4c88"
        android:text="@string/predict"
        android:textColor="@color/white"
 />
    <TextView
        android:id="@+id/responseView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/response"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
</LinearLayout>
</ScrollView>